# EllinCRM

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_embeddings_table.py  003_upgrade_embedding_dimension.py  004_add_hybrid_search_columns.py  005_add_audit_logs_table.py  006_chat_agent_readonly_role.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  ai_router.py  chat_agent.py  chat_tools.py  embeddings.py  greek_text.py  hybrid_search.py  models.py  similarity.py
backend/app/core/: config.py  logging.py  rate_limit.py  runtime_settings.py
backend/app/db/: __init__.py  database.py  models.py  readonly_session.py  repositories.py
backend/app/extractors/: __init__.py  base.py  email_extractor.py  form_extractor.py  invoice_extractor.py  pdf_invoice_extractor.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  chat.py  extraction.py  notifications.py  records.py  search.py
backend/app/services/: __init__.py  ai_call.py  export_service.py  google_sheets_service.py  llm_extractor.py  notification_service.py  rag_service.py  record_service.py
backend/credentials/: .gitignore  README.md  google-sheets-credentials.example.json
backend/scripts/: __init__.py  check_quota.py  cleanup_drive.py  init_sheet.py  reembed_all.py  test_google_sheets.py  verify_google_api.py
backend/tests/: __init__.py  conftest.py  test_ai_greek_text.py  test_api_extraction.py  test_api_records.py  test_chat_golden.py  test_core_config.py  test_core_logging.py  test_db_models.py  test_db_repositories.py  test_email_extractor.py  test_extractors_base.py  test_extractors_edge_cases.py  test_form_extractor.py  test_invoice_extractor.py  test_models_schemas.py  test_notification_service.py  test_pdf_invoice_extractor.py  test_record_service_extended.py  test_routers_search.py  test_services.py  test_services_extended.py
backend/tests/golden/: chat_queries.yaml
docs/: GOOGLE_SHEETS_SETUP.md  INITIAL_SETUP.md  ROADMAP.md  User_Manual.md
dummy_data/emails/: email_01.eml  email_02.eml  email_03.eml  email_04.eml  email_05.eml  email_06.eml  email_07.eml  email_08.eml  email_09.eml  email_10.eml
dummy_data/forms/: contact_form_1.html  contact_form_2.html  contact_form_3.html  contact_form_4.html  contact_form_5.html
dummy_data/invoices/: invoice_EC-2025-001.html  invoice_EC-2025-002.html  invoice_EC-2025-003.html  invoice_EC-2025-004.html  invoice_EC-2025-005.html  invoice_EC-2025-006.html  invoice_EC-2025-007.html  invoice_EC-2025-008.html  invoice_EC-2025-009.html  invoice_EC-2025-010.html
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/extraction/: page.tsx
frontend/app/records/: page.tsx
frontend/components/chat/: chat-widget.tsx  message-bubble.tsx  source-citation.tsx
frontend/components/dashboard/: confidence-chart.tsx  demo-mode-button.tsx  recent-activity.tsx  stats-cards.tsx  (+2 more)
frontend/i18n/: request.ts
frontend/lib/: motion.tsx  types.ts  utils.ts
frontend/messages/: el.json  en.json
frontend/public/: manifest.json  offline.html  sw.js
frontend/scripts/: generate-icons.js
frontend/tests/: setup.ts  types.test.ts
(+46 files in other folders)
