[project]
name = "ellincrm"
version = "1.0.0"
description = "EllinCRM - AI Document Automation Backend"
authors = [
    {name = "Kypraios Chariton", email = "kypraios@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "LicenseRef-Proprietary (see LICENSE.md)"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# Phase 2D note: chat golden tests use module-level singletons bound to the
# first test's event loop. pytest-asyncio isolates loops per test function,
# so subsequent tests fail with "bound to a different event loop". Run one
# test at a time via `-k` or use the HTTP endpoint directly. See
# tests/test_chat_golden.py for the full explanation.
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Main entrypoint (not unit testable)
    "app/main.py",
    # External service verification script
    "app/verify_google_api.py",
    # Runtime settings (environment-dependent)
    "app/core/runtime_settings.py",
    # WebSocket notifications router (requires live connections)
    "app/routers/notifications.py",
    # Google Sheets integration (external API)
    "app/services/google_sheets_service.py",
    # Database connection setup (infrastructure)
    "app/db/database.py",
    # AI services requiring external models/GPU
    "app/ai/embeddings.py",
    "app/ai/hybrid_search.py",
    "app/ai/similarity.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# FastAPI routers legitimately raise HTTPException inside except blocks
# without `from err`, to avoid leaking internal stack traces to clients.
# They also accept framework-injected args (e.g. `request`) that may be
# unused in individual handlers.
"app/routers/*.py" = ["B904", "ARG001"]

# FastAPI lifespan + middleware signatures require parameters that may be
# unused in this entrypoint.
"app/main.py" = ["ARG001"]

# Third-party Google Sheets service wraps the Google API SDK; several
# methods intentionally match Google's interface signatures and are
# stubs for future capability, so unused args are expected.
"app/services/google_sheets_service.py" = ["ARG002", "B904", "SIM105"]

# Export service contains presentation-layer helpers whose signatures
# mirror openpyxl's style API.
"app/services/export_service.py" = ["ARG002"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "structlog.*",
    "sentence_transformers.*",
    "langchain.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
